# ais-map-rest-service-mongo

./: .env.dist  Cargo.toml  README.md
src/: config.rs  main.rs
