[package]
name = "ais-map-rest-service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
chrono = "0.4.39"
dotenvy = "0.15.7"
env_logger = "0.11.6"
log = "0.4.25"
mongodb = "3.2.0"
serde = "1.0.217"
serde-env = "0.2.0"
tokio = { version = "1.43.0", features = ["full"] }
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
futures-util = "0.3.31"
futures = "0.3.31"
